Added URI class contribution made by Paul Eng and iClick.
git-svn-id: https://svn.apache.org/repos/asf/xerces/java/trunk@315821 13f79535-47bb-0310-9956-ffa450edef68